# mdbook-ocirun

./: Cargo.toml  Dockerfile  README.md  README.tpl
.github/workflows/: main.yml  publish.yml
src/: lib.rs  main.rs  ocirun.rs  snippet.rs
src/utils/: mod.rs  string.rs
tests/: command.rs  regression.rs
tests/book/: book.toml
tests/book/src/: echo_report.md
tests/book/src/nested/: echo_again.md
tests/book_dynamic_src/: book.toml
tests/book_dynamic_src/src_parent/src/: echo_report.md
tests/book_dynamic_src/src_parent/src/nested/: echo_again.md
tests/regression/bash_call/: input.md  input_win.md
tests/regression/inline_call/: input.md  input_win.md  price.mjs  quantity.mjs
tests/regression/py_factorial/: input_win.md
tests/regression/py_fibonacci/: input_win.md
tests/regression/py_readme/: input.md  input_win.md  output.md  output_win.md  program.rs
tests/regression/rust_call/: input.md  input_win.md
tests/regression/shell/: input.md  input_win.md
