[package]
name = "mdbook-ocirun"
version = "0.1.0"
edition = "2021"
authors = ["Ettore Leandro Tognoli <ettoreleandrotognoli@gmail.com>"]
description = "mdbook preprocessor to run arbitrary commands on containers"
license = "MIT"
homepage = "https://github.com/ettoreleandrotognoli/mdbook-ocirun"
repository = "https://github.com/ettoreleandrotognoli/mdbook-ocirun"
keywords = ["mdbook", "ocirun", "preprocessor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = "4.*.*"
mdbook = "0.4.*"
serde = "1.0.164"
serde_json = "1.0.*"
regex = "1.*.*"
toml = "0.7.5"
lazy_static = "1.4.0"
cfg-if = "1.0.0"
